assets/css/application.css
h1, h2, h3, h4, h5, h6 {
  font-family: 'Oxygen', sans-serif !important;
}

p {
  font-family: 'Oxygen', sans-serif !important;
}

.header {
  width: 100%;
  height: 300px;
  overflow: hidden;
  position: fixed;
  top: 0px;
  z-index: 99;
}

.header .page-title {
  background-color: rgba(0,0,0,0.4);
  height: 250px;
  width: 100%;
  overflow: hidden;
  position: absolute;
  box-shadow: 0px 0px 10px 10px rgba(0,0,0,0.4);
}

.header .page-title-icon {
  width: 150px;
  height: auto;
  border-radius: 75px;
  border: 2px rgba(255,255,255,0.8) solid;
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -75px;
  margin-left: -75px;
}

.header .page-title-text {
  color: rgba(255,255,255,0.8);
  text-align: center;
  position: relative;
  margin: 0px auto;
  top: 195px;
}

.main {
  background-color: white;
  width: 90%;
  margin-right: auto;
  margin-left: auto;
  box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.2);
  position: relative;
  margin-top: 300px;
  z-index:2;
}

.main-top
{
  margin: 0px;
  overflow: hidden;
  padding: 0px 20px;
}

.main-top h2 {
  text-align: center;
}

.main-works
{
  margin: 0px;
  overflow: hidden;
  padding: 0px 20px;
}

.main-works h2 {
  text-align: center;
}

.works-item {
  margin: 20px auto;
}

.main-contacts
{
  margin: 0px;
  overflow: hidden;
  padding: 0px 20px;
}

.main-contacts h2 {
  text-align: center;
}

.js-masonry {
   margin: 0px auto;
}

.js-masonry .item {
  background-color: rgba(0,0,0,0.05);
  border-radius: 20px;
  margin: 20px;
  padding: 10px;
  width: 250px;
}

.item .item-icon {
  position: relative;
  margin-left: auto;
  margin-right: auto;
  max-width: 120px;
}

.item .item-title {
  font-size: 28px;
  width: 100%;
  text-align: center;
  margin-bottom: 0px;
}

.item .item-description {
  color: rgba(0,0,0,0.6);
  font-size: 18px;
  width: 100%;
  text-align: center;
  overflow: hidden;
}

.linkbox a {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  z-index: 50;
}

.footer {
  background-color: rgba(0,0,0,0);
  width: 100%;
  height: 150px;
  overflow: hidden;
}

.footer .content {
  text-align: center;
  margin: 50px auto;
}

/* media queries */
@media (max-width: 2700) {
  .main {
    width: 80%;
  }
}

@media (max-width: 767px) {
  .main {
    width: 100%;
  }
  
  .item {
    width: 100px !important;
  }
  
  .item-icon {
    max-width: 80px !important;
  }
  
  .item-title {
    display: none;
  }

  .item-description {
    display: none;
  }
}

